# c4d-companion-demo

./: .gitignore  README.md  aes_sw  c4d-uc5-launcher.py  c4dCnnPkg.py  c4dSettings.py  encryptDemos_16B.sh  masterScript.py  pymavlinkPkg.py  requirements.txt
c4d_sw/: __init__.py  aesHelperPkg.py  c4dCnnPkg.py  c4dSettings.py  pymavlinkPkg.py
docs/: C4D_Demo_Documentation_v0.3.docx  c4d Demo Documentation.docx
models/: c4d-aitek-v1.onnx
modules/: c4d-uc5-onnx-helper.py  c4d-uc5-settings.py  c4dUc5OnnxHelper.py  c4dUc5Settings.py  c4d_uc5_aes_helper.py  c4d_uc5_mavlink_helper.py  c4d_uc5_onnx_helper.py  c4d_uc5_settings.py
sw-aarch64/: CMakeLists.txt  Makefile
sw-aarch64/src/inc/: Taks.h
